--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             background-color: transparent
         }
     </style>
-    <title>The Ponzi™</title>
+    <title>The Konzi™</title>
     <link href="/static/css/9.c6ecb03b.chunk.css" rel="stylesheet">
     <link href="/static/css/main.23272e58.chunk.css" rel="stylesheet">
     <style id="_goober">
@@ -296,7 +296,7 @@
                                 <h1 class="announcement__title title">EVERYTHING IS A PONZI. SO WHY BUY ANYTHING ELSE?
                                 </h1>
                                 <p class="announcement__content paragraph">Moonboys in awe as genius investors all print
-                                    generational wealth from The Ponzi™ </p>
+                                    generational wealth from The Konzi™ </p>
                             </div>
                             <div class="home-banner">
                                 <div class="home-banner-news-wrapper">
@@ -308,10 +308,10 @@
                                     <div class="marketplace-box">
                                         <div class="marketplace-box-inner">
                                             <div class="title-box">
-                                                <h1 class="marketplace-box-title mini-title">PONZI™ STORE</h1>
+                                                <h1 class="marketplace-box-title mini-title">Konzi™ STORE</h1>
                                             </div>
                                             <p class="paragraph">To join the Charlie Army - all you need to do is pick
-                                                up a single Ponzi™ NFT or Coin. Be quick though, you know how this Ponzi
+                                                up a single Konzi™ NFT or Coin. Be quick though, you know how this Ponzi
                                                 thing works, the faster you buy, the more you make. Enrol now. Your
                                                 fellow Charlies need you.</p><a class="btn" href="/market">EXPLORE</a>
                                         </div>
@@ -320,8 +320,8 @@
                                 <div class="home-banner-news-content">
                                     <h1 class="title">$PONZI SET TO SHOCK THE LIVING SHIT OUT OF GLOBAL MARKETS</h1>
                                     <p class="paragraph"><span class="big">A</span>All too simple, isn't it now? We're a
-                                        Ponzi, The Ponzi™. That's all there is to grasp so don't overthink it. Stop
-                                        buying pointless Ponzis and start buying The Ponzi™ for the sake of your own
+                                        Ponzi, The Konzi™. That's all there is to grasp so don't overthink it. Stop
+                                        buying pointless Ponzis and start buying The Konzi™ for the sake of your own
                                         self respect and that of your children's. And their children too. Everyone's
                                         here in this cesspit to get rich off Ponzi schemes anyway and all these
                                         investors, founders and influencers are the same. They are just like you, you
@@ -329,10 +329,10 @@
                                     <div class="marketplace-box">
                                         <div class="marketplace-box-inner">
                                             <div class="title-box">
-                                                <h1 class="marketplace-box-title mini-title">PONZI™ STORE</h1>
+                                                <h1 class="marketplace-box-title mini-title">Konzi™ STORE</h1>
                                             </div>
                                             <p class="paragraph" style="column-count: 1;">To join the Charlie Army - all
-                                                you need to do is pick up a single Ponzi™ NFT or Coin. Be quick though,
+                                                you need to do is pick up a single Konzi™ NFT or Coin. Be quick though,
                                                 you know how this Ponzi thing works, the faster you buy, the more you
                                                 make. Enrol now. Your fellow Charlies need you.</p><a class="btn"
                                                 href="/market">EXPLORE</a>
@@ -344,14 +344,14 @@
                             <div class="home-latest__articles__wrapper">
                                 <div class="article__link__wrapper"><a class="article__item__link" href="/news/9"><span
                                             class="article__link__number">1</span>
-                                        <h4 class="article__link__title">Ponzi™ Coin</h4>
+                                        <h4 class="article__link__title">Konzi™ Coin</h4>
                                         <div class="article__link__paragrpah">
                                             <p>Charlies, It's time to run it back.</p>
                                             <p>Looking back at how the market has unfolded, we were clearly ju...</p>
                                         </div>
                                     </a><a class="article__item__link" href="/news/1"><span
                                             class="article__link__number">2</span>
-                                        <h4 class="article__link__title">The Ponzi™ is finally here</h4>
+                                        <h4 class="article__link__title">The Konzi™ is finally here</h4>
                                         <div class="article__link__paragrpah">
                                             <h6></h6>
                                             <p>We were all fooled. From top to bottom. The game is up. Everyone has
@@ -386,7 +386,7 @@
                                                 class="section__news__media section__news__media--mobile"></span>
                                     </figure>
                                     <div class="section__news__content__wrapper">
-                                        <p class="paragraph"><span class="big">T</span>he Ponzi™ is a community ran
+                                        <p class="paragraph"><span class="big">T</span>he Konzi™ is a community ran
                                             project counter-culuturing the cesspit we all reside in known as Web3 with
                                             dark &amp; ironic humourology. Holders of the NFT, proudly self-titled as
                                             Charlies, share admin access to socials, keys to the multi sig safe and
@@ -413,7 +413,7 @@
                         <div class="news-section-inner">
                             <div class="news-column">
                                 <div class="news">
-                                    <h1 class="mini-title">PONZI™ REPENTS THE MARKET'S SINS</h1>
+                                    <h1 class="mini-title">Konzi™ REPENTS THE MARKET'S SINS</h1>
                                     <figure class="news-pic-wrapper"><span
                                             class="lazy-load-desktop-wrapper lazy-load-image-background blur"
                                             style="color: transparent; display: inline-block;"><img
@@ -471,7 +471,7 @@
                     </section>
                     <section class="nft-section">
                         <div class="nft-section-inner">
-                            <h1 class="banner-title">✹ BUY PONZI™</h1>
+                            <h1 class="banner-title">✹ BUY Konzi™</h1>
                             <p class="paragraph last">FREE MINT</p>
                             <div class="nft-slider-nothings">
                                 <div class="nft-slider-nothings-inner">
@@ -488,7 +488,7 @@
                     </section>
                     <section class="big-news-section">
                         <div class="big-news-section-inner">
-                            <h1 class="banner-title">✹ BUY PONZI™</h1>
+                            <h1 class="banner-title">✹ BUY Konzi™</h1>
                             <div class="news">
                                 <figure class="news-pic-wrapper"><span
                                         class="lazy-load-desktop-wrapper lazy-load-image-background blur"
@@ -517,7 +517,7 @@
                                     through us — his disciples — the latter-day Charlies.
                                 </p>
                             </div>
-                            <h1 class="banner-title">✹ BUY PONZI™ </h1>
+                            <h1 class="banner-title">✹ BUY Konzi™ </h1>
                             <figure class="news-pic-wrapper"><span
                                     class="lazy-load-desktop-wrapper lazy-load-image-background blur"
                                     style="color: transparent; display: inline-block;"><img
@@ -533,18 +533,18 @@
                                         <h1 class="mini-title">CRYPTO BROS THROWN LIFELINE IN THE DARKEST DAYS OF BEAR
                                             MARKET</h1>
                                         <p class="paragraph"><span class="big">A</span>fter what can only be described
-                                            as a boner-killer of a year, 2023 commences with the launch of The Ponzi™
+                                            as a boner-killer of a year, 2023 commences with the launch of The Konzi™
                                             giving every crypto bro a chance at redemption. Sure, none of us planned to
                                             move back into our mum's basement at 28 but how else do we build character
                                             as Charlies? Through the greatest adversity, heroes are found, and in the
-                                            core of pressure diamonds are formed. That is exactly what The Ponzi™ is.
+                                            core of pressure diamonds are formed. That is exactly what The Konzi™ is.
                                         </p>
                                     </div>
                                     <h1 class="mini-title center">✹✹✹</h1>
                                     <div class="news-box">
                                         <h1 class="mini-title">STUDY FINDS CHARLIES ARE A CUT ABOVE THE REST</h1>
                                         <p class="paragraph"><span class="big">A</span> study from The Royal Institute
-                                            of Giga Brain Chads unsurprisingly found that holders of The Ponzi™ token
+                                            of Giga Brain Chads unsurprisingly found that holders of The Konzi™ token
                                             had a much higher IQ than the average investor. In truth, the experiment was
                                             over before it began as invigilators called a halt to proceedings after the
                                             first round of tests. The tests began by examining each individual's problem
@@ -553,18 +553,18 @@
                                             patients instantly futile in a vegetative state. Verified reports confirm
                                             patients were found reciting random letters of the alphabet in what could
                                             only be described as subconscious ritual chanting. Everyone that remained
-                                            coherent was confirmed to be a Ponzi™ maxi and a front line soldier of The
-                                            Ponzi™ Army. This was by no means a coincidence.</p>
+                                            coherent was confirmed to be a Konzi™ maxi and a front line soldier of The
+                                            Konzi™ Army. This was by no means a coincidence.</p>
                                     </div>
                                 </div>
                                 <div class="news-column">
                                     <div class="news-box">
                                         <h1 class="mini-title">FOMO SETS IN AS MASS PONZIFICATION™ GETS UNDERWAY</h1>
-                                        <p class="paragraph"><span class="big">A</span>s The Ponzi™ continues to defy
+                                        <p class="paragraph"><span class="big">A</span>s The Konzi™ continues to defy
                                             the doubters, laying an endless array of green candles on the table top,
                                             FOMO is being felt across the markets. The inevitability? Mass
                                             Ponzification. Critics are already U-turning on their premature judgements
-                                            and are said to be buying The Ponzi™ at a blistering rate. Admitting to
+                                            and are said to be buying The Konzi™ at a blistering rate. Admitting to
                                             themselves, and the world, that it’s an unstoppable force — backed by an
                                             army of devoted Charlies who will stop at nothing to secure victory. All
                                             across the world, Charlies continue to grow in numbers — and in strength —
@@ -572,16 +572,16 @@
                                     </div>
                                     <h1 class="mini-title center">✹✹✹</h1>
                                     <div class="news-box">
-                                        <h1 class="mini-title">CRITIC HITS OUT AT THE PONZI™, CALLING IT A ‘PONZI
+                                        <h1 class="mini-title">CRITIC HITS OUT AT THE Konzi™, CALLING IT A ‘PONZI
                                             SCHEME’</h1>
                                         <p class="paragraph"><span class="big">K</span>aren Nocoyner, head of the Fiat
-                                            Fiddling Association, has declared war on The Ponzi™, describing it as
+                                            Fiddling Association, has declared war on The Konzi™, describing it as
                                             nothing more than a 'Ponzi scheme'. Chad Chaddington, Head Chad at The Royal
                                             Institute of Giga-Brain Chads responded to Karen's claims by pointing to the
                                             FFA's core policies, labelling them as Ponzi-like themselves. 'The FFA's
                                             tyrannical policies are designed to dilute your wealth with no return
                                             whatsoever', said Chad. He ended the remark by twirling his moustache and
-                                            declaring that the makers of The Ponzi™ are 'jolly good chaps'. A statement
+                                            declaring that the makers of The Konzi™ are 'jolly good chaps'. A statement
                                             that cannot be refuted, after all, it did come from The Institute of
                                             Giga-Brain Chads.</p>
                                     </div>
@@ -592,11 +592,11 @@
                     <footer class="footer">
                         <div class="footer-inner">
                             <div class="infinite-box">
-                                <h1 class="medium-title" style="--title-width: 266.9250030517578px;">✹ BUY PONZI™</h1>
+                                <h1 class="medium-title" style="--title-width: 266.9250030517578px;">✹ BUY Konzi™</h1>
                             </div>
                             <div class="line"></div>
                             <div class="footer-content">
-                                <p class="paragraph">© The Ponzi™ EST. 09/05/22</p><a
+                                <p class="paragraph">© The Konzi™ EST. 09/05/22</p><a
                                     href="https://twitter.com/OfficialPonzi" target="_blank" rel="noreferrer"
                                     class="paragraph no-transition tweet-button"><img src="/twitter.svg" alt="Twitter"
                                         class="image">Tweet us</a><a class="paragraph credits no-transition"
